--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.5",
     "firebase": "^9.6.1",
     "vue": "^2.6.14",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-thailand-address": "^3.4.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0"
   },
